merge in pom updates and support for checkstyle from trunk, but no checkstyle modules are enabled for now.
git-svn-id: https://svn.apache.org/repos/asf/openjpa/branches/1.3.x@789769 13f79535-47bb-0310-9956-ffa450edef68