@@ -33,12 +33,19 @@
     <groupId>org.apache.openjpa</groupId>
     <artifactId>openjpa-parent</artifactId>
     <packaging>pom</packaging>
-    <name>OpenJPA</name>
+    <name>OpenJPA Parent POM</name>
     <description>OpenJPA</description>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <openjpa.version>${pom.version}</openjpa.version>
+        <openjpa.loglevel>INFO</openjpa.loglevel>
+        <test.jvm.maxpermsize>256m</test.jvm.maxpermsize>
+        <test.jvm.maxheapsize>512m</test.jvm.maxheapsize>
+        <test.jvm.arguments>-Xmx${test.jvm.maxheapsize} -XX:MaxPermSize=${test.jvm.maxpermsize}</test.jvm.arguments>
+        <!-- the sufire.jvm.args can be overridden my specific profiles -->
+        <surefire.jvm.args>${test.jvm.arguments}</surefire.jvm.args>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <checkstyle.config.location>../openjpa-project/checkstyle.xml</checkstyle.config.location>
     </properties>
 
     <!--
@@ -113,7 +120,7 @@
             </modules>
             <build>
                 <plugins>
-                <plugin>
+                    <plugin>
                     <!--
                         javadoc plugin doesn't copy resources like the normal jar plugin.
                         Unzip license,etc from normal jar and add to javadoc jar.
@@ -239,6 +246,9 @@
                                     <exclude>openjpa-project/*.txt</exclude>
                                     <exclude>README.txt</exclude>
                                     <exclude>BUILDRELEASE</exclude>
+                                    <exclude>scripts/*.list</exclude>
+                                    <exclude>scripts/*.options</exclude>
+                                    <exclude>scripts/*.dict</exclude>
 
                                     <!-- generated content -->
                                     <exclude>**/*.log</exclude>
@@ -247,6 +257,9 @@
                                     <exclude>**/org.apache.openjpa.revision.properties</exclude>
                                     <exclude>**/target/**/*</exclude>
                                     <exclude>release.properties</exclude>
+                                    <exclude>**/NOTICE.vm</exclude>
+                                    <exclude>**/LICENSE.vm</exclude>
+                                    <exclude>**/dependency-reduced-pom.xml</exclude>
 
                                     <!--
                                         Exclude internal repository. These files are 
@@ -401,6 +414,10 @@
                                 <exclude>openjpa-project/*.txt</exclude>
                                 <exclude>README.txt</exclude>
                                 <exclude>BUILDRELEASE</exclude>
+                                <exclude>scripts/*.list</exclude>
+                                <exclude>scripts/*.options</exclude>
+                                <exclude>scripts/*.dict</exclude>
+
 
                                 <!-- generated content -->
                                 <exclude>**/*.log</exclude>
@@ -409,6 +426,9 @@
                                 <exclude>**/org.apache.openjpa.revision.properties</exclude>
                                 <exclude>**/target/**/*</exclude>
                                 <exclude>release.properties</exclude>
+                                <exclude>**/NOTICE.vm</exclude>
+                                <exclude>**/LICENSE.vm</exclude>
+                                <exclude>**/dependency-reduced-pom.xml</exclude>
 
                                 <!--
                                     Exclude internal repository. These files are 
@@ -430,7 +450,43 @@
             <properties>
                 <test.env>-Dtest.basedir=${basedir}/..</test.env>
                 <policy.file>${basedir}/../openjpa-persistence-jdbc/src/test/resources/j2.security.test.policy</policy.file>
-                <surefire.jvm.args>-Djava.security.manager -Djava.security.policy=${policy.file} ${test.env}</surefire.jvm.args>
+                <surefire.jvm.args>-Djava.security.manager -Djava.security.policy=${policy.file} ${test.env} ${test.jvm.arguments}</surefire.jvm.args>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>test-dynamic-enhancer</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <test.env>-Dtest.basedir=${basedir}/..</test.env>
+                <policy.file>${basedir}/../openjpa-persistence-jdbc/src/test/resources/j2.security.test.policy</policy.file>
+                <surefire.jvm.args>-Djava.security.manager -Djava.security.policy=${policy.file} ${test.env} ${test.jvm.arguments}</surefire.jvm.args>
+            </properties>
+            <build>
+                <plugins>
+                   <plugin>
+                       <groupId>org.apache.maven.plugins</groupId>
+                       <artifactId>maven-surefire-plugin</artifactId>
+                       <configuration>
+                           <argLine>${surefire.jvm.args}</argLine>
+                           <includes>
+                               <include></include>
+                           </includes>
+                       </configuration>
+                   </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>debug</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <test.jvm.arguments>-Xmx${test.jvm.maxheapsize} -XX:MaxPermSize=${test.jvm.maxpermsize} -agentlib:jdwp=transport=dt_socket,server=y,address=8000</test.jvm.arguments>
             </properties>
         </profile>
 
@@ -693,6 +749,18 @@
                     <version>1.2.1</version>
                 </plugin>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-checkstyle-plugin</artifactId>
+                    <version>2.2</version>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.codehaus.plexus</groupId>
+                            <artifactId>plexus-velocity</artifactId>
+                            <version>1.1.3</version>
+                        </dependency>
+                    </dependencies>
+                </plugin>
+                <plugin>
                     <groupId>org.apache.felix</groupId>
                     <artifactId>maven-bundle-plugin</artifactId>
                     <version>1.4.3</version>
@@ -723,7 +791,26 @@
                     </execution>
                 </executions>
             </plugin>
-       </plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>process-sources</phase>
+                        <goals>
+                            <goal>checkstyle</goal>
+                        </goals>
+                        <configuration>
+                            <configLocation>${checkstyle.config.location}</configLocation>
+                            <failsOnError>true</failsOnError>
+                            <consoleOutput>true</consoleOutput>
+                            <includeTestSourceDirectory>true</includeTestSourceDirectory>
+                            <excludes>**/*_.java</excludes>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+	</plugins>
     </build>
     <reporting>
         <plugins>
@@ -751,6 +838,15 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>taglist-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <configuration>
+                    <configLocation>${checkstyle.config.location}</configLocation>
+                    <includeTestSourceDirectory>true</includeTestSourceDirectory> 
+                    <excludes>**/*_.java</excludes>
+                </configuration>
             </plugin>
         </plugins>
     </reporting>
